--- a/EmployeeManagementSystem/myapp/templates/all_emp.html
+++ b/EmployeeManagementSystem/myapp/templates/all_emp.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" 
     integrity="sha384-dpuaG1suU0eT09tx5plTaGMLBsfDLzUCCUXOY2j/LSvXYuG6Bqs43ALlhIqAJVRb" crossorigin="anonymous">
 
-    <title>View All Employees!</title>
+    <title>All Employees!</title>
     <style>
       h2{
         color:green;
-        margin-top:25px;
+        margin:20px;
       }
       hr {
         height: 2px; 
@@ -23,48 +23,74 @@
   </head>
   <body>
     <div class="container mt-4">
-        <h2 class="text-center">All Employees Details</h2><hr><br>
+        <h2 class="text-center">All Employees</h2>
+        <hr><br>
+
+        <!-- Employee Table -->
         <table class="table table-dark table-striped">
           <thead>
               <tr>
                   <th scope="col">S.No.</th>
-                  <th scope="col">First Name</th>
-                  <th scope="col">Last Name</th>
+                  <th scope="col">Full_Name</th>
+                  <th scope="col">Email_Id</th>
+                  <th scope="col">Job_Role</th>                             
+                  <th scope="col">Phone_No.</th>
                   <th scope="col">Salary</th>
-                  <th scope="col">Bonus</th>
-                  <th scope="col">Phone Number</th>
-                  <th scope="col">Role</th>
-                  <th scope="col">Department_No.</th>
                   <th scope="col">Location</th>
-                  <th scope="col">Hiring Date</th>
+                  <th scope="col">Resume</th>
+                  <th scope="col">Edit</th>
               </tr>
           </thead>
           <tbody>
-              {% if emps %}
-                  {% for emp in emps %}
-                  <tr>
-                      <th scope="row">{{ emp.id }}</th>
-                      <td>{{ emp.first_name }}</td>
-                      <td>{{ emp.last_name }}</td>
-                      <td>{{ emp.salary }}</td>
-                      <td>{{ emp.bonus }}</td>
-                      <td>{{ emp.phone }}</td>
-                      <td>{{ emp.role.role }}</td> 
-                      <td>{{ emp.dept_no.dept_no }}</td>
-                      <td>{{ emp.location }}</td>
-                      <td>{{ emp.hire_date|date:"d-m-Y" }}</td>    
-                  </tr>
-                  {% endfor %}
-              {% else %}
-                  <tr>
-                      <td colspan="10" class="text-center">No employees found</td>
-                  </tr>
-              {% endif %}
-          </tbody>
-      </table>      
+            {% if emps %}
+                {% for emp in emps %}
+                    <tr>
+                        <th scope="row">{{ forloop.counter }}</th>
+                        <td>{{ emp.full_name }}</td>
+                        <td>{{ emp.email }}</td>
+                        <td>{{ emp.job_role }}</td>                                        
+                        <td>{{ emp.phone }}</td>
+                        <td>{{ emp.salary }}</td>
+                        <td>{{ emp.location }}</td>
+                        <td class="text-center">
+                          {% if emp.resume %}
+                              <a href="{{ emp.resume.url }}" target="_blank" class="btn btn-sm btn-success">Download</a>
+                          {% else %}
+                              <span class="text-muted">No</span>
+                          {% endif %}
+                        </td>                      
+                        <td>
+                          <a href="{% url 'edit_emp' emp.id %}" class="btn btn-sm btn-primary">Edit</a>
+                        </td>                        
+                    </tr>
+                {% endfor %}
+            {% else %}
+                <tr>
+                    <td colspan="9">No employees found</td>
+                </tr>
+            {% endif %}
+          </tbody>                         
+        </table>   
+        
+        <div class="text-center mt-4">
+          <a href="{% url 'add_emp' %}" class="btn btn-outline-primary btn-lg px-3">Add More</a>
+          <a href="{% url 'index' %}" class="btn btn-outline-primary btn-lg px-4">Home</a>
+        </div>
+
     </div>
 
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script>
+      setTimeout(function () {
+        let alerts = document.querySelectorAll('.alert');
+        alerts.forEach(function (alert) {
+          let bsAlert = new bootstrap.Alert(alert);
+          bsAlert.close();
+        });
+      }, 3000);
+    </script>
   </body>
 </html>
