--- a/EmployeeManagementSystem/myapp/templates/base.html
+++ b/EmployeeManagementSystem/myapp/templates/base.html
@@ -39,8 +39,27 @@
       </div>
     </nav>    
   </header>
+  
+
+  <!-- Flash Messages -->
+  <center>
+  <div class="container mt-3">
+    {% if messages %}
+      {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+          {{ message }}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>          
+        </div>
+      {% endfor %}
+    {% endif %}
+  </div>
+  </center>
+
   {% block content %}
   {% endblock %}
+
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
