--- a/EmployeeManagementSystem/myapp/templates/filter_emp.html
+++ b/EmployeeManagementSystem/myapp/templates/filter_emp.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" integrity="sha384-dpuaG1suU0eT09tx5plTaGMLBsfDLzUCCUXOY2j/LSvXYuG6Bqs43ALlhIqAJVRb" crossorigin="anonymous">
 
-    <title>Filter Employee</title>
+    <title>Filter Employees!</title>
     <style>
       body {
           background-color: #f8f9fa;
@@ -23,7 +23,7 @@
       }
       h2 {
           text-align: center;
-          color:rgba(255, 98, 0, 0.99);
+          color: rgba(255, 98, 0, 0.99);
       }
       .form-group {
           margin-bottom: 20px;
@@ -41,44 +41,23 @@
         background-color: black; 
         border: none; 
       }
-  </style>
+    </style>
   </head>
   <body>
     <div class='container'>
-        <h2>Filter Employee Details</h2><hr><br>
+        <h2>Search</h2><hr><br>
         <form action="/filter_emp/" method="POST">
           {% csrf_token %}
     
           <div class="form-group">
-              <label for="first_name">First Name/Last Name</label>
-              <input type="text" id="name" name="name" value="{{name}}" class="form-control">
-          </div>
- 
-          <div class="form-group">
-              <label for="role">Role</label>
-              <div class="input-group">
-                  <input type="text" id="new_role" name="new_role" value="{{role}}" class="form-control">
-              </div>
-          </div>
-          
-          <div class="form-group">
-              <label for="location">Location</label>
-              <input type="text" id="location" name="location" value="{{location}}" class="form-control">
+              <input type="text" id="keyword" name="keyword" value="{{ keyword }}" class="form-control" placeholder="Enter your keywords..." required>
           </div><br>
 
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary">Search</button>
         </form>
     </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
