--- a/EmployeeManagementSystem/myapp/templates/index.html
+++ b/EmployeeManagementSystem/myapp/templates/index.html
@@ -9,17 +9,30 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <style>
     .container {
+      width:950px;
       text-align: center;
-      border: 5px solid green;
-      color: black;
-      border-radius:30px;
-      box-shadow: 2px 2px 2px yellow;
-      padding:20px;
+      border: 2px solid #0ff;
+      border-radius: 30px;
+      padding: 20px;
+      background: linear-gradient(145deg,rgb(0, 0, 0),rgb(131, 106, 106));
+      color: #0ff;
+      font-family: 'Courier New', Courier, monospace;
+      box-shadow: 0 0 20px #0ff, 0 0 15pxrgb(244, 15, 15);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      animation: fadeInScale 0.5s ease-in-out;
+    }
+    .container:hover {
+      transform: scale(1.01);
+      box-shadow: 0 0 25px #0ff, 0 0 40px rgb(244, 72, 15);
     }
     hr {
-      height: 2px;
-      background-color: red;
+      height: 5px;
       border: none;
+      background: linear-gradient(to right, #ff00cc, #3333ff, #00ffcc);
+      border-radius: 5px;
+      margin: 12px auto;
+      width: 75%;
+      animation: glowLine 3s linear infinite;
     }
     body::before {
       content: '';
@@ -28,7 +41,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: url("{% static 'images/office.jpg' %}");
+      background-image: url("{% static 'images/offices.jpg' %}");
       background-attachment: fixed;
       background-size: cover;
       background-repeat: no-repeat;
@@ -36,6 +49,25 @@
       filter: blur(4px);
       z-index: -1;
     }
+    .btn-custom {
+      width: 280px;
+      padding: 12px 22px;
+      font-size: 18px;
+      font-weight: bold;
+      color: lightcyan;
+      border: 2px solid #0ff;
+      border-radius: 10px;
+      transition: all 0.2s ease;
+      box-shadow: 0 0 5px #0ff;
+    }
+    .btn-custom:hover,
+    .btn-custom:focus,
+    .btn-custom:active {
+      background-color:rgb(221, 255, 231);
+      color: black;
+      box-shadow: 0 0 6px black, 0 0 6px black;
+      transform: scale(1.05);
+    }    
   </style>
 </head>
 <body>
@@ -71,14 +103,14 @@
   </header>
   <br>
   <main class="container my-4">
-    <h1>Office Employee Management System</h1>
+    <h2>Office Employee Management System</h2>
     <hr /><br>
-    <div class="d-flex flex-column align-items-center">
-      <a class="btn btn-primary mx-2 mb-4" href="/filter_emp" role="button">Filter Employee Details</a>
-      <a class="btn btn-primary mx-2 mb-4" href="/remove_emp" role="button">Remove An Employee</a>
-      <a class="btn btn-primary mx-2 mb-4" href="/all_emp" role="button">View All Employee</a>
-      <a class="btn btn-primary mx-2 mb-3" href="/add_emp" role="button">Add An Employee</a>
-    </div>
+    <div class="d-flex flex-column align-items-center gap-3">
+      <a class="btn btn-custom mb-3" href="/all_emp" role="button">All Employees</a>
+      <a class="btn btn-custom mb-3" href="/add_emp" role="button">Add Employees</a>
+      <a class="btn btn-custom mb-3" href="/remove_emp" role="button">Remove Employees</a>
+      <a class="btn btn-custom mb-3" href="/filter_emp" role="button">Search</a>
+    </div>        
   </main>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
