--- a/EmployeeManagementSystem/myapp/templates/remove_emp.html
+++ b/EmployeeManagementSystem/myapp/templates/remove_emp.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" integrity="sha384-dpuaG1suU0eT09tx5plTaGMLBsfDLzUCCUXOY2j/LSvXYuG6Bqs43ALlhIqAJVRb" crossorigin="anonymous">
 
-    <title>Remove Employee</title>
+    <title>Remove Employees!</title>
     <style>
       h2{
         color:darkcyan;
@@ -29,14 +29,14 @@
   </head>
   <body>
     <div class='container'>
-        <h2>Remove an Employee</h2><hr><br>
+        <h2>Remove Employees</h2><hr><br>
         <div class="dropdown">
           <button class="btn btn-primary dropdown-toggle" type="button" id="employeeDropdown" data-bs-toggle="dropdown" aria-expanded="false">
               Select Employee
           </button>
           <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="employeeDropdown">
               {% for emp in emps %}
-                  <li><a class="dropdown-item" href="{% url 'remove_emp' emp.id %}">{{ emp.first_name }} {{ emp.last_name }}</a></li>
+                  <li><a class="dropdown-item" href="{% url 'remove_emp' emp.id %}">{{ emp.full_name }} ({{ emp.phone }})</a></li>
               {% empty %}
                   <li><span class="dropdown-item text-muted">No employees available</span></li>
               {% endfor %}
